Fri May 27 13:20:32 CEST 2011 <Daniel.Diaz@univ-paris1.fr>

	* GNU Prolog is now licensed under LGPL or GLP
	* port to x86_64/MinGW64 - many thanks to:
	  Jasper Taylor <jasper@simulistics.com> (see src/WINDOWS64)
	* port to x86_64/MSVC (see src/WINDOWS64)
	* add a configure option to control Windows HtmlHelp
	  --disable-htmlhelp or --enable-htmlhelp[=static/dynamic]
	* improve a lot (and fix some bugs in) the Windows GUI Console
	* change location of gprologvars.bat under Windows (in install directory)
	* increase default stack sizes (32Mb for heap, 16Mb for others)
	* fix a bug in the compiler (bad unification with singleton variable)
	* fix a bug with strict_iso flag (was not passed to consult)
	* add shebang support using #!/usr/bin/gprolog --consult-file
	* modify the mangling scheme for future module support (see hexgplc)
	* fix write_term default options (now numbervars(false) and namevars(false))
	* fix read/1: tab and newlines are not accepted inside single/back/double quoted tokens
	* add additional errors to compare/3 and keysort/2
	* accept space under the top-level (same as ;)
	* modify portray_clause/1-2 to add a newline at the end of the output

Mon Nov 29 15:48:25 CET 2010 <Daniel.Diaz@univ-paris1.fr>

	* rename evaluable functor atan/2 as atan2/2 and >< as xor
	* add evaluable functor div/2
	* detect op/3 error cases for | [] {}
	* replace type_error(variable, X) by uninstantiation_error(X) (e.g. open/3-4)

Fri Nov 26 12:00:32 CEST 2010 <Daniel.Diaz@univ-paris1.fr>

	* add built-in term_variables/2-3 and subsumes_term/2

Mon Nov 22 17:12:58 CEST 2010 <Daniel.Diaz@univ-paris1.fr>

	* add some type tests on chars and codes (in number_chars/2, number_codes/2,..)

Wed Nov 17 15:43:38 CEST 2010 <Daniel.Diaz@univ-paris1.fr>

	* fix some little bugs in the parser
	* add meta_predicate property to predicate_property/2

Mon Oct 25 10:39:51 CEST 2010 <Daniel.Diaz@univ-paris1.fr>

	* fix a memory leak in atom_concat/3 (in case of failure)
