@@ -19,7 +19,7 @@ AC_CONFIG_SRCDIR(SETVARS)
 PROLOG_NAME='GNU Prolog'
 PROLOG_DIALECT='gprolog'
 PROLOG_VERSION='1.4.0'
-PROLOG_DATE='May 24 2011'
+PROLOG_DATE='Jun 1 2011'
 PROLOG_COPYRIGHT='Copyright (C) 1999-2011 Daniel Diaz'
 
 TOP_LEVEL=$PROLOG_DIALECT
