@@ -9,6 +9,7 @@ Change in GNU Prolog version 1.4.0:
 * improve a lot (and fix some bugs in) the Windows GUI Console
 * change location of gprologvars.bat under Windows (in install directory)
 * increase default stack sizes (32Mb for heap, 16Mb for others)
+* change the default setting for flag strict_iso: it is off now
 * fix a bug in the compiler (bad unification with singleton variable)
 * fix a bug with strict_iso flag (was not passed to consult)
 * add shebang support using #!/usr/bin/gprolog --consult-file
@@ -18,6 +19,8 @@ Change in GNU Prolog version 1.4.0:
 * add additional errors to compare/3 and keysort/2
 * accept space under the top-level (same as ;)
 * modify portray_clause/1-2 to add a newline at the end of the output
+* add acyclic_term/1 (compatibility only since GNU Prolog does not handle cyclic terms)
+* fix write/1 to treat '$VARNAME'(Atom) as a var name only if Atom is a valid var name
 * rename evaluable functor atan/2 as atan2/2 and >< as xor
 * add evaluable functor div/2
 * detect op/3 error cases for | [] {}
